--- a/backend/package.json
+++ b/backend/package.json
@@ -1,7 +1,15 @@
 {
-  "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.0.0",
-    "socket.io": "^4.6.1"
-  }
+	"dependencies": {
+		"dotenv": "^16.0.3",
+		"express": "^4.18.2",
+		"mongoose": "^7.0.0",
+		"socket.io": "^4.6.1",
+		"socket.io-client": "^4.6.1"
+	},
+	"devDependencies": {
+		"jest": "^29.4.3"
+	},
+	"scripts": {
+		"test": "jest"
+	}
 }
